--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ address{
     justify-content: center;
     align-items: center;
 }
-.button {
+.button, .button2 {
     background-color: antiquewhite;
     border-color: rgb(85, 49, 8);
     border-radius: 5%;
@@ -89,8 +89,9 @@ address{
     padding: 2%;
     margin: 5%;
     font-family: 'Source Serif Pro', Times, serif;
+   
 }
-.button a{
+.button a, .button2 p{
     text-decoration: none;
     color: rgb(85, 49, 8);
     font-size: larger;
@@ -186,3 +187,37 @@ address{
 }
 /*оформление словаря художника*/
 .dictpic{text-align: center;}
+.dictpic img:hover{
+    transition: all 2s;
+    transform: scale(1.5);
+}
+/*оформление раздела идеи для вдохновения*/
+.container{
+    width: 95%;
+    height: 40vh;
+    display: flex;
+    text-align: center;
+    background-image: url("река.jpg");
+}
+
+.quotes{
+    width: 50%;
+    height: 50%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 50px;
+    border: 5px solid rgb(80, 15, 15);
+    background-color: oldlace;
+}
+
+.quotes p{
+    font-size: 1.5rem;
+}
+@media(max-width: 480px){
+    .quotes p{
+        font-size: 1rem;
+    } 
+}
