--- a/style.css
+++ b/style.css
@@ -185,6 +185,10 @@ address{
   from {opacity: .4}
   to {opacity: 1}
 }
+
+.firstpic {
+    display: block;
+}
 /*оформление словаря художника*/
 .dictpic{text-align: center;}
 .dictpic img:hover{
